--- a/main.html
+++ b/main.html
@@ -13,17 +13,38 @@
 
 
     <h1> Cats </h1>
-   
 
-  
+    <select id="breedSelect">
+  <option value="">-- Kies een ras --</option>
+</select>
 
+<label><input type="checkbox" id="showfavorites"> Toon alleen favorieten</label>
+<button id="refreshButton">Laad meer katten</button>
+
+<div id="breedInfo"></div>
+<div id="grid"></div>
+
+
+   <!-- 
+ <button id="refreshButton"> Refresh </button> 
+ <div id="favoriteCheckbox" > 
+ <label> favorites : </label> <input type="checkbox" id="showfavorites"> </div>
+ 
+  Kattenrassen filter 
+  <h1>🐱 Kies een kattenras</h1>
+  <select id="breedSelect">
+  <option value="">-- Kies een ras --</option>
+</select>
+
+<div id="breedInfo"></div>
+ 
     
     <div class="maincontent">
     <div id="grid" class="imgrid">
    
     
     </div>
- </div>
+ </div> --> 
 
 
 
